# FinPulse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
src/finpulse/: main.py
src/finpulse/agents/: data_fetcher.py
src/finpulse/utils/: data_utils.py
tests/: test_agents.py
