[project]
name = "finpulse"
version = "0.1.0"
description = "Fin pulse is an agent that uses real-time stock data to analyze trends, predict short-term prices and generate reports with visualisations for proactive insights."
authors = [
    {name = "Jongisapho Ndeya",email = "u22625926@tuks.co.za"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
